# Phonopy-Spectroscopy

./: pixi.toml  pyproject.toml  vasprun.xml
.beads/: Phonopy-Spectroscopy.db  issues.jsonl
lib/spectroscopy/cli/: parser.py
scripts/: phonopy-ir  phonopy-raman  xyz2poscar
spectroscopy/cli/: ir_main.py  raman_main.py  runtime.py  xyz2poscar_main.py
spectroscopy/interfaces/: vasp_interface.py
