[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phonopy-spectroscopy"
version = "0.1.0"
description = "Phonopy-Spectroscopy is a project to add the capability to simulate vibrational spectra to the Phonopy code."
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.6"
dependencies = ["numpy", "pyyaml", "phonopy", "h5py"]

[project.scripts]
phonopy-ir = "spectroscopy.cli.ir_main:main"
phonopy-raman = "spectroscopy.cli.raman_main:main"
xyz2poscar = "spectroscopy.cli.xyz2poscar_main:main"

[tool.setuptools]
packages = ["spectroscopy"]

[tool.pixi-build-python]
editable = false
